added javadoc and jitpack repo in pom

--- a/pom.xml
+++ b/pom.xml
@@ -6,19 +6,11 @@
 
     <groupId>com.github.frameworkium</groupId>
     <artifactId>frameworkium-base</artifactId>
-    <version>1.0</version>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>7</source>
-                    <target>7</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+    <version>3.0-BETA1</version>
+    <name>frameworkium-base</name>
+    <description>
+        Base Frameworkium project referenced by all other frameworkium projects.
+    </description>
 
     <dependencies>
         <dependency>
@@ -41,7 +33,40 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.7</version>
         </dependency>
-</dependencies>
+    </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>7</source>
+                    <target>7</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 
 </project>
