--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.frameworkium</groupId>
     <artifactId>frameworkium-base</artifactId>
-    <version>3.0-BETA2</version>
+    <version>3.0-BETA2-SNAPSHOT</version>
     <name>frameworkium-base</name>
     <description>
         Base Frameworkium project referenced by all other frameworkium projects.
